--- a/editor.html
+++ b/editor.html
@@ -473,8 +473,8 @@ const url_string = window.location.href;
 const url = new URL(url_string);
 const cart = url.searchParams.get("cart");
 if (cart!=undefined) {
+  document.querySelector(".input").value= decodeURIComponent(cart).replaceAll("mod","%");
   pixel8.input = decodeURIComponent(cart).replaceAll("mod","%");
-  input.innerHTML = decodeURIComponent(cart).replaceAll("mod","%");
 }
 u();
 let t=0;
