--- a/editor.html
+++ b/editor.html
@@ -4,20 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <meta name="theme-color" content="#262637"> 
+   <meta name="theme-color" content="#262637">
+   <link rel="icon" type="image/x-icon" href="img/icon.png">
   <title>Pixel-8 xyt Editor</title>
 </head>
 
 <style>
 @font-face {
   font-family: pixel8;
-  src: url('font/pixel8.woff');
+  src: url("font/pixel8.woff");
 }
 @font-face {
   font-family: font;
-  src: url('telefon.otf');
+  src: url("telefon.otf");
 }
-/*format('truetype');*/
 * {
   margin: 0;
   padding: 0;
@@ -30,6 +30,7 @@
 }
 html {
   height: -webkit-fill-available;
+  overflow: hidden;
 }
 body {
   height: calc(100%);
@@ -37,6 +38,7 @@ body {
   min-height: -webkit-fill-available;
   width: 100%;
   background: rgb(25,26,48);
+  overflow: hidden;
 }
 img {
   display: none;
@@ -45,6 +47,7 @@ img {
   position: absolute;
   border: none;
   background: #0002;
+  resize: none;
 }
 .input:focus {
   outline: none;
@@ -95,373 +98,24 @@ img {
 }
 </style>
 
-<body res="256">
+<body res="128" init="f">
   <div id="pixel8_screen">
     <canvas id="pixel8_canvas"></canvas>
-    <textarea class="input" oninput="u()">col=(x|y)+t</textarea>
+    <textarea class="input" oninput="u()">col=(t+x|t+y)-t</textarea>
     <button onclick="copy()" id="copy">C</button>
   </div>
 </body>
+<script src="js/pixel8.js"></script>
 <script>
-//Pixel8 Fantasy console
-//All Rights Reserved 2023 Nxrix,Toxel
-
-const $ = function(id) { return document.getElementById(id); }
-
-const pixel8 = [];
-
-//--main div--//
-pixel8.screen = $("pixel8_screen");
-//--canvas--//
-pixel8.canvas = $("pixel8_canvas");
-pixel8.ctx = pixel8.canvas.getContext('2d');
-pixel8.res = document.body.getAttribute("res")||128;
-pixel8.canvas.width = pixel8.res;
-pixel8.canvas.height = pixel8.res;
-
-pixel8.compositionTypes = [
-  'source-in',
-  'source-out',
-  'source-atop',
-  'destination-over',
-  'destination-in',
-  'destination-out',
-  'destination-atop',
-  'lighter',
-  'copy',
-  'xor',
-  'multiply',
-  'screen',
-  'overlay',
-  'darken',
-  'lighten',
-  'color-dodge',
-  'color-burn',
-  'hard-light',
-  'soft-light',
-  'diffrence',
-  'exclusion',
-  'hue',
-  'saturation',
-  'color',
-  'luminosity'
-];
-
-pixel8.xyznrgb = (r,g,b) => {
-  return {x:r ,y:g ,z:b};
-}
-
-pixel8.palette = [];
-
-pixel8.colors = [
-  "rgb(220,221,255)",
-  "rgb(255,26,94)",
-  "rgb(243,104,16)",
-  "rgb(249,255,137)",
-  "rgb(52,255,79)",
-  "rgb(34,195,236)",
-  "rgb(156,97,255)",
-  "rgb(255,189,166)",
-  "rgb(134,134,207)",
-  "rgb(203,25,79)",
-  "rgb(207,55,30)",
-  "rgb(255,230,65)",
-  "rgb(41,209,72)",
-  "rgb(34,143,236)",
-  "rgb(115,43,255)",
-  "rgb(255,156,138)",
-  "rgb(49,51,113)",
-  "rgb(139,26,68)",
-  "rgb(174,18,6)",
-  "rgb(255,203,0)",
-  "rgb(33,141,70)",
-  "rgb(0,99,202)",
-  "rgb(86,48,160)",
-  "rgb(255,117,187)",
-  "rgb(25,26,48)",
-  "rgb(77,10,55)",
-  "rgb(123,9,0)",
-  "rgb(255,136,13)",
-  "rgb(25,97,84)",
-  "rgb(24,37,175)",
-  "rgb(40,24,71)",
-  "rgb(184,24,140)"
-];
-
-for (let x = 0; x < 8; x++) {
-  for (let y = 0; y < 4; y++) {
-    var i = y*8 + x;
-    pixel8.palette[x*4+y] = pixel8.colors[i];
-  }
-}
-
-if ($("sprite")!=undefined) {
-  pixel8.sprite = $("sprite");
-  pixel8.sprite.style.display = 'none';
-}
-
-
-//--Bayer Matrix Arrays--//
-
-pixel8.bayer4 = [
-  [  1,  9,  3, 11 ],
-  [ 13,  5, 15,  7 ],
-  [  4, 12,  2, 10 ],
-  [ 16,  8, 14,  6 ]
-];
-  
-pixel8.bayer8 = [
-  [  1, 33,  9, 41,  3, 35, 11, 43 ],
-  [ 49, 17, 57, 25, 51, 19, 59, 27 ],
-  [ 13, 45,  5, 37, 15, 47,  7, 39 ],
-  [ 61, 29, 53, 21, 63, 31, 55, 23 ],
-  [  4, 36, 12, 44,  2, 34, 10, 42 ],
-  [ 52, 20, 60, 28, 50, 18, 58, 26 ],
-  [ 16, 48,  8, 40, 14, 46,  6, 38 ],
-  [ 64, 32, 56, 24, 62, 30, 54, 22 ]
-];
-
-//--main functions--//
-
-//font
-pixel8.ctx.font = "16px pixel8";
-
-const cls = (x) => {
-  pixel8.ctx.clearRect(0,0,pixel8.canvas.width,pixel8.canvas.height);
-  pixel8.canvas.style.background = x;
-}
-
-const pow = (x,y) => {
-  return Math.pow(x,y);
-}
-
-const rnd = (x) => {
-  return Math.random() * (x || 1);
-}
-
-const flr = (x) => {
-  return Math.floor(x);
-}
-
-const deg = (x) => {
-  return x * Math.PI / 180;
-}
-
-const sin = (x) => {
-  return Math.sin(x);
-}
-
-const cos = (x) => {
-  return Math.cos(x);
-}
-
-//--rotate x,y by z--//
-const rot = (x1,y1,x,y,a) => {
-  radians = (Math.PI / 180) * a;
-  var c = Math.cos(radians);
-  var s = Math.sin(radians);
-  nx = (c * (x - x1)) + (s * (y - y1)) + x1;
-  ny = (c * (y - y1)) - (s * (x - x1)) + y1;
-  return [nx,ny];
-}
-
-//dist3D({x:1,y:2,z:3},{x:3,y:2,z:1});
-const dist2D = (v1, v2) => {
-  a = v2.x - v1.x;
-  b = v2.y - v1.y;
-  return Math.hypot(a,b);
-}
-const dist3D = (v1, v2) => {
-  a = v2.x - v1.x;
-  b = v2.y - v1.y;
-  c = v2.z - v1.z;
-  return Math.hypot(a,b,c);
-}
-
-//--rotation of two points--//
-const lookAt2D = (v1,v2) => {
-  return Math.atan2(v2.y - v1.y, v2.x - v1.x) * 180 / Math.PI;
-}
-const lookAt3D = (v1,v2) => {
-  return Math.atan2(v2.y - v1.y, v2.x - v1.x) * 180 / Math.PI;
-}
-
-//--RGB to index--//
-const rgb2index = (r,g,b,list) => {
-  let id = 0;
-  let min = Infinity;
-  for (let i = 0; i < list.length; i++) {
-    col = eval("pixel8.xyzn"+list[i]);
-    a = (r-col.x)*(r-col.x)+(g-col.y)*(g-col.y)+(b-col.z)*(b-col.z);
-    if (a < min) {
-      id = i;
-      min = a;
-    }
-  }
-  return id;
-}
-
-//--RGB to color--//
-const rgb2color = (r,g,b) => {
-  return "rgb("+r+","+g+","+b+")";
-}
-
-//--camera--//
-const camera = (x,y) => {
-  pixel8.camx = x;
-  pixel8.camy = y;
-}
-
-//--drawing functions--//
-
-pixel8.rgbPalette = new Image();
-pixel8.scripts = document.getElementsByTagName("script");
-pixel8.src = pixel8.scripts[pixel8.scripts.length-1].src;
-pixel8.rgbPalette.src = pixel8.src.split("pixel8.js")[0]+"i128.png";
-
-const pixs = (x,y,r,g,b,s,w) => {
-  r = Math.max(Math.min(r,255),0);
-  g = Math.max(Math.min(g,255),0);
-  b = Math.max(Math.min(b,255),0);
-  x1 = Math.min(r/2,128-s);
-  y1 = Math.min(g/2,128-s)+Math.floor(Math.min(b/2,128-s))*128;
-  pixel8.ctx.drawImage(pixel8.rgbPalette,x1,y1,s,s,x,y,w,w);
-}
-
-const pset = (x,y,c) => {
-  x = Math.round(x);
-  y = Math.round(y);
-  pixel8.ctx.beginPath();
-  pixel8.ctx.fillStyle = c;
-  pixel8.ctx.fillRect(x,y,1,1);
-  pixel8.ctx.fill();
-}
-
-const pget = (x,y) => {
-  x = Math.round(x);
-  y = Math.round(y);
-  data = pixel8.ctx.getImageData(x,y, 1, 1).data;
-  return "rgb(" + data[0] + "," + data[1] + "," + data[2] + ")";
-}
-
-const spr = (i,j,x,y,z) => {
-  pixel8.ctx.imageSmoothingEnabled = false;
-  pixel8.ctx.drawImage(pixel8.sprite,i*z,j*z,z,z,x,y,z,z);
-}
-
-const sspr = (x,y,w,h,x1,y1,w1,h1,r) => {
-  pixel8.ctx.save();
-  pixel8.ctx.imageSmoothingEnabled = false;
-  pixel8.ctx.translate(x+w/2,y+h/2);
-  pixel8.ctx.rotate(r * (Math.PI/180));
-  pixel8.ctx.translate(-x-w/2,-y-h/2);
-  pixel8.ctx.drawImage(pixel8.sprite,x1,y1,w1,h1,x,y,w,h);
-  pixel8.ctx.restore();
-}
-
-const circ = (x,y,s,c,w) => {
-  x = Math.round(x);
-  y = Math.round(y);
-  s = Math.round(s);
-  pixel8.ctx.beginPath();
-  pixel8.ctx.arc(x,y,s,0,2*Math.PI);
-  pixel8.ctx.strokeStyle = c;
-  pixel8.ctx.lineWidth = w || 1;
-  pixel8.ctx.stroke();
-}
-
-const circfill = (x,y,s,c) => {
-  x = Math.round(x);
-  y = Math.round(y);
-  s = Math.round(s);
-  pixel8.ctx.beginPath();
-  pixel8.ctx.arc(x,y,s,0,2*Math.PI);
-  pixel8.ctx.fillStyle = c;
-  pixel8.ctx.fill();
-}
-
-const line = (x,y,x1,y1,c,w) => {
-  x = Math.round(x);
-  y = Math.round(y);
-  x1 = Math.round(x1);
-  y1 = Math.round(y1);
-  pixel8.ctx.beginPath();
-  pixel8.ctx.moveTo(x,y);
-  pixel8.ctx.strokeStyle = c;
-  pixel8.ctx.lineWidth = w || 1;
-  pixel8.ctx.stroke();
-}
-
-const rectfill = (x,y,sx,sy,c) => {
-  x = Math.round(x)-sx/2;
-  y = Math.round(y)-sy/2;
-  sx = Math.round(sx);
-  sy = Math.round(sy);
-  pixel8.ctx.beginPath();
-  pixel8.ctx.fillStyle = c;
-  pixel8.ctx.fillRect(x,y,sx,sy);
-  pixel8.ctx.fill();
-}
-
-const rect = (x,y,sx,sy,c) => {
-  x = Math.round(x)-sx/2;
-  y = Math.round(y)-sy/2;
-  sx = (sx);
-  sy = (sy);
-  pixel8.ctx.beginPath();
-  pixel8.ctx.strokeStyle = c;
-  pixel8.ctx.strokeRect(x,y,sx,sy);
-  pixel8.ctx.stroke();
-}
-
-const rectrot = (x,y,sx,sy,c,r) => {
-  x = Math.round(x)-sx/2;
-  y = Math.round(y)-sy/2;
-  sx = Math.round(sx);
-  sy = Math.round(sy);
-  pixel8.ctx.save();
-  pixel8.ctx.beginPath();
-  pixel8.ctx.translate(x+sx/2,y+sy/2);
-  pixel8.ctx.rotate(r * (Math.PI/180));
-  pixel8.ctx.translate(-x-sx/2,-y-sy/2);
-  pixel8.ctx.fillStyle = c;
-  pixel8.ctx.fillRect(x,y,sx,sy);
-  pixel8.ctx.fill()
-  pixel8.ctx.restore();
-}
-
-const trifill = (x,y,x1,y1,x2,y2,c) => {
-  x = Math.round(x);
-  y = Math.round(y);
-  x1 = Math.round(x1);
-  y1 = Math.round(y1);
-  x2 = Math.round(x2);
-  y2 = Math.round(y2);
-  pixel8.ctx.beginPath();
-  pixel8.ctx.fillStyle = c;
-  pixel8.ctx.moveTo(x,y);
-  pixel8.ctx.lineTo(x1,y1);
-  pixel8.ctx.lineTo(x2,y2);
-  pixel8.ctx.fill();
-}
-
-//--make canvas context render without antialiasing--//
-//pixel8.ctx.filter = `url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg"><filter id="f" color-interpolation-filters="sRGB"><feComponentTransfer><feFuncA type="discrete" tableValues="0 1"/></feComponentTransfer></filter></svg>#f')`;
-</script>
-<script>
-function copyText(text) {
-  textarea = document.createElement("textarea");
-  document.body.appendChild(textarea)
-  textarea.value = text;
-  textarea.select();
-  document.execCommand("copy");
-  document.body.removeChild(textarea);
-}
 function copy() {
   copyText(
     "https://Nxrix.github.io/Pixel-8/?cart="+encodeURIComponent(pixel8.input.replaceAll("%","mod"))
   );
 }
+document.body.addEventListener("keydown",function(e) {
+  key=e.keyCode;
+  console.log(((96 <= key && key <= 105) ? key-48 : key));
+});
 function u() {
   pixel8.input = document.querySelector(".input").value;
 };
@@ -471,7 +125,7 @@ col=x^y+t;[sx,sy]=rot(c,c,sx,sy,15);[sy,sz]=rot(c,15.5,sy,col%32,-30);
 /*
 s=(z)=>{return sin(z/4+t/8)*8+8};col=x^y;[sx,sy]=rot(c,c,sx,sy,t);[sy,sz]=rot(c,15.5,sy,col%w,t);sz+=w;sx=(sx-c)*w/sz+c;sy=(sy-c)*w/sz+c;
 */
-pixel8.input = "col=(x|y)+t";
+pixel8.input = "col=(x|y)+t;";
 const url_string = window.location.href;
 const url = new URL(url_string);
 const cart = url.searchParams.get("cart");
@@ -481,7 +135,7 @@ if (cart!=undefined) {
 }
 u();
 let t=0;
-const scale = 8;
+const scale = 4;
 let sr=0;
 const w=pixel8.res/scale;
 const c=w/2-.5;
@@ -491,25 +145,38 @@ function update() {
   console.clear();
   requestAnimationFrame(update);
   cls();
-  for (i=0;i<w;i++) {
-    for (j=0;j<w;j++) {
+  i=0;
+  while (i<w) {
+    j=0;
+    while (j<w) {
       x=i,y=j;sx=i;sy=j;sz=1;
       col=2;
       eval(pixel8.input);
       vec[x+y*w] = {x:sx,y:sy,z:sz,c:col};
+      j++;
     }
+    i++;
   }
   vec.sort((v1,v2) => {
     return v2.z - v1.z;
   });
-  for (i in vec) {
+  l=vec.length;
+  i=0;
+  while(i<l) {
     [sx,sy,sz,col]=[vec[i].x,vec[i].y,vec[i].z,vec[i].c];
-    pixel8.ctx.fillStyle = pixel8.palette[Math.round(col||2)%pixel8.palette.length];
-    sx=Math.round(sx*scale);
-    sy=Math.round(sy*scale);
     if (sz>0) {
-      pixel8.ctx.fillRect(sx,sy,scale+sr,scale+sr);
+      sx=Math.round(sx*scale);
+      sy=Math.round(sy*scale);
+      if (isNaN(col)) {
+        col1=eval("pixel8.xyzn"+col);
+        pixs(sx,sy,col1.x,col1.y,col1.z,.125,scale);
+      }
+      else {
+        pixel8.ctx.fillStyle = (pixel8.palette[Math.round(col||2)%pixel8.palette.length]);
+        pixel8.ctx.fillRect(sx,sy,scale+sr,scale+sr);
+      }
     }
+    i++;
   }
   t++;
 }
