--- a/editor.html
+++ b/editor.html
@@ -130,7 +130,7 @@ pixel8.canvas.onclick=function(){
 
 pixel8.canvas.style.background = pixel8.palette[0];
 function update() {
-  //console.clear();
+  console.clear();
   pixel8.ctx.clearRect(0,0,pixel8.canvas.width,pixel8.canvas.height);
   requestAnimationFrame(update);
   if (page==-1) {
