--- a/editor.html
+++ b/editor.html
@@ -61,12 +61,17 @@ col=x^y+t;[sx,sy]=rot(c,c,sx,sy,15);[sy,sz]=rot(c,15.5,sy,col%32,-30);
 /*
 s=(z)=>{return sin(z/4+t/8)*8+8};col=x^y;[sx,sy]=rot(c,c,sx,sy,t);[sy,sz]=rot(c,15.5,sy,col%w,t);sz+=w;sx=(sx-c)*w/sz+c;sy=(sy-c)*w/sz+c;
 */
-document.querySelector(".play").onclick=function () {
-  document.querySelector(".play").style.display="none";
-  pixel8.canvas.style.background = pixel8.palette[0];
-  pixel8.sctx = new (window.AudioContext || window.webkitAudioContext)();
-  update();
+pixel8.init = true;
+window.onclick = function () {
+  if (pixel8.init) {
+    pixel8.init = false;
+    document.querySelector(".play").remove();
+    pixel8.canvas.style.background = pixel8.palette[0];
+    pixel8.sctx = new (window.AudioContext || window.webkitAudioContext)();
+    update();
+  }
 }
+
 let t=0;
 let page=-1;
 pixel8.cursor = 0;
