--- a/editor.html
+++ b/editor.html
@@ -2,13 +2,18 @@
 <html>
 
 <head>
+
+<script>
+//window.onerror = function(message, url, lineNumber) {  
+  //return lineNumber; 
+//};
+</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="theme-color" content="#262637">
    <link rel="icon" type="image/x-icon" href="img/icon.png">
   <title>Pixel-8 xyt Editor</title>
 </head>
-
 <style>
 .play {
   position: fixed;
@@ -29,21 +34,31 @@
   overflow-y: scroll;
   display: none;
 }
+#input::-webkit-scrollbar {
+  width: calc((100vw/128) * 5);
+}
+#input::-webkit-scrollbar-track {
+  background: rgb(49,51,113);
+}
+::-webkit-scrollbar-thumb {
+  background: rgb(134,134,207);
+}
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(220,221,255);
+}
 #input:focus {
   outline: none;
 }
 @media (orientation: portrait) {
   #input {
     width: calc((100vw/128) * 122);
-    height: calc((100vw/128) * 112);
-    margin-top: calc((100vw/128) * 10);
+    height: calc((100vw/128) * 102);
   }
 }
 @media (orientation: landscape) {
   #input {
     width: calc((100vmin/128) * 122);
-    height: calc((100%/128) * 112);
-    margin-top: calc((100vmin/128) * 10);
+    height: calc((100%/128) * 102);
   }
 }
 </style>
@@ -59,7 +74,12 @@
 col=x^y+t;[sx,sy]=rot(c,c,sx,sy,15);[sy,sz]=rot(c,15.5,sy,col%32,-30);
 */
 /*
-s=(z)=>{return sin(z/4+t/8)*8+8};col=x^y;[sx,sy]=rot(c,c,sx,sy,t);[sy,sz]=rot(c,15.5,sy,col%w,t);sz+=w;sx=(sx-c)*w/sz+c;sy=(sy-c)*w/sz+c;
+s=(z)=>{return sin(z/4+t/8)*8+8};
+col=x^y;
+[sx,sy]=rot(c,c,sx,sy,t);
+[sy,sz]=rot(c,15.5,sy,col%w,t);
+sz+=w;
+sx=(sx-c)*w/sz+c;sy=(sy-c)*w/sz+c;
 */
 pixel8.init = true;
 window.onclick = function () {
@@ -68,12 +88,12 @@ window.onclick = function () {
     document.querySelector(".play").remove();
     pixel8.canvas.style.background = pixel8.palette[0];
     pixel8.sctx = new (window.AudioContext || window.webkitAudioContext)();
+    pixel8.ctx.textBaseline = "top";
     update();
   }
 }
-
 let t=0;
-let page=-1;
+pixel8.page=-1;
 pixel8.cursor = 0;
 const scale = 4;
 const w=pixel8.res/scale;
@@ -93,11 +113,6 @@ pixel8.note = (frequency,type,time) => {
   o.stop(pixel8.sctx.currentTime + time);
 }
 
-function copy() {
-  copyText(
-    "https://Nxrix.github.io/Pixel-8/?cart="+encodeURIComponent(pixel8.input.replaceAll("%","mod"))
-  );
-}
 input.addEventListener("input", function(e) {
   pixel8.input = input.value;
 });
@@ -125,19 +140,27 @@ function btn(x,y,i,j,d,s) {
   spr(i,j,x,y+z,s);
   return z;
 }
-
+pixel8.encodeURI = (x) => {
+  return encodeURI(x)
+    .replace(/%5B/g,"[")
+    .replace(/%5D/g,"]")
+    .replace(/%7B/g,"{")
+    .replace(/%7D/g,"}")
+    .replace(/%25/g,"%")
+    .replace(/%5E/g,"^")
+    .replace(/%7C/g,"|");
+}
 pixel8.input = input.value;
 const url_string = window.location.href;
 const url = new URL(url_string);
-const cart = url.searchParams.get("cart");
-if (cart!=undefined) {
-  cartD = decodeURIComponent(cart).replaceAll("mod","%");
-  input.value = cartD;
-  pixel8.input = cartD;
+const cart = url.hash.substring(1);
+if (cart!=undefined&&cart!="") {
+  input.value = cart;
+  pixel8.input = cart;
 }
 
 pixel8.canvas.onclick=function(){
-  if (page==0) {
+  if (pixel8.page==0) {
     input.style.display="block";
   }
   else {
@@ -146,88 +169,93 @@ pixel8.canvas.onclick=function(){
 }
 function update() {
   console.clear();
-  pixel8.ctx.clearRect(0,0,pixel8.canvas.width,pixel8.canvas.height);
   requestAnimationFrame(update);
+  pixel8.ctx.clearRect(0,0,pixel8.canvas.width,pixel8.canvas.height);
   pixel8.cursor = 0;
-  if (page==-1) {
-    input.style.display="none";
-    var sn=sin(t/16);
-    sspr(64-16*sn,64-20,32*sn,32,0,0,7,7);
-    pixel8.ctx.fillStyle = pixel8.palette[2];
-    pixel8.ctx.fillText("Pixel-8",52,86);
-    var note = [1,3,4,2,5];
-    if (t%6==0&&t<60) {
-      pixel8.note(note[(t/6)%5]*256,"square",.5);
-    } 
-    if (t>64) page=2,pixel8.ctx.shadowColor="#0000",pixel8.ctx.shadowOffsetX=0,pixel8.ctx.shadowOffsetY=0,pixel8.canvas.style.background = pixel8.palette[3];
-    else {
-      pixel8.ctx.shadowColor=pixel8.palette[1];
-      pixel8.ctx.shadowOffsetX=-2;
-      pixel8.ctx.shadowOffsetY=2;
-    }
-  }
-  else if (page==0) {
-    input.style.display="block";
-    rect(64,69,125,115,pixel8.palette[2]);
-    for (i=0;i<w;i++) {
-      for (j=0;j<w;j++) {
-        x=i,y=j;sx=i;sy=j;
-        col=2;
-        eval(pixel8.input);
-        pset(x+96,y+96,pixel8.palette[Math.round(col)%32])
+  switch (pixel8.page) {
+    case -1:
+      input.style.display="none";
+      var sn=sin(t/16);
+      sspr(64-16*sn,64-20,32*sn,32,0,0,7,7);
+      pixel8.ctx.fillStyle = pixel8.palette[2];
+      pixel8.ctx.fillText("Pixel-8",52,80);
+      var note = [1,3,4,2,5];
+      if (t%6==0&&t<60) {
+        pixel8.note(note[(t/6)%5]*256,"square",.5);
+      } 
+      if (t>64) pixel8.page=-2,pixel8.ctx.shadowColor="#0000",pixel8.ctx.shadowOffsetX=0,pixel8.ctx.shadowOffsetY=0,pixel8.canvas.style.background = pixel8.palette[3];
+      else {
+        pixel8.ctx.shadowColor=pixel8.palette[1];
+        pixel8.ctx.shadowOffsetX=-2;
+        pixel8.ctx.shadowOffsetY=2;
       }
-    }
-  }
-
-  //run cart
-  else if (page==1) {
-    input.style.display="none";
-    //viewer
-    sz=1;
-    for (i=0;i<w;i++) {
-      for (j=0;j<w;j++) {
-        x=i,y=j;sx=i;sy=j;
-        col=2;
-        eval(pixel8.input);
-        vec[x+y*w] = {x:sx,y:sy,z:sz,c:col};
+      break;
+    case -2 :
+      input.style.display="none";
+      pixel8.ctx.fillStyle = pixel8.palette[2];
+      var str = "Welcome to Pixel-8 0.3\n(c) 2022 - 2023 Toxel , Nxrix\n\nManual:\n> sx,sy,sz are for screen pixels\n> x,y are for 2d loop of pixels\n> i,j are predefined for loop!\n> t is used for time".split("\n");
+      for (i in str) {
+        pixel8.ctx.fillText(str[i],1,3+i*5);
       }
-    }
-    vec.sort((v1,v2) => {
-      return v2.z - v1.z;
-    });
-    for (i in vec) {
-      [sx,sy,sz,col]=[vec[i].x,vec[i].y,vec[i].z,vec[i].c];
-      if (sz>0) {
-        sx=sx*scale+128+scale/2;
-        sy=sy*scale+scale/2;
-        rectfill(sx,sy,scale,scale,pixel8.palette[Math.round(col||2)%32]);
+      break;
+    //--Editor--//
+    case 0: 
+      input.style.display="block";
+      rectfill(64,121,122,8,pixel8.palette[2]);
+      pixel8.ctx.fillStyle = pixel8.palette[1];
+      txt=pixel8.encodeURI(pixel8.input).length;
+      pixel8.ctx.fillText("url length:",4,112);
+      pixel8.ctx.fillText(txt,125-pixel8.ctx.measureText(txt).width,112);
+      rect(64,69,125,115,pixel8.palette[2]);
+      for (var i=0;i<w;i++) {
+        for (var j=0;j<w;j++) {
+          var x=i;var y=j;var sx=i;var sy=j;
+          var col=2;
+          eval(pixel8.input);
+          pset(sx+86,sy+83,pixel8.palette[Math.round(col)%32]);
+        }
       }
-    }
-    if (btn(130,61,4,0,4,7)) cam(0,0),page=0;
-    if (btn(246,61,8,0,4,7)) copy();
+      break;
+    case 1:
+      input.style.display="none";
+      //viewer
+      var sz=1;
+      for (var i=0;i<w;i++) {
+        for (var j=0;j<w;j++) {
+          var x=i;var y=j;var sx=i;var sy=j;
+          var col=2;
+          eval(pixel8.input);
+          vec[x+y*w] = {x:sx,y:sy,z:sz,c:col};
+        }
+      }
+      vec.sort((v1,v2) => {
+        return v2.z - v1.z;
+      });
+      for (i in vec) {
+        [sx,sy,sz,col]=[vec[i].x,vec[i].y,vec[i].z,vec[i].c];
+        if (sz>0) {
+          sx=sx*scale+128+scale/2;
+          sy=sy*scale+scale/2;
+          rectfill(sx,sy,scale,scale,pixel8.palette[Math.round(col||2)%32]);
+        }
+      }
+      if (btn(130,61,4,0,4,7)) cam(0,0),pixel8.page=0;
+      if (btn(246,61,8,0,4,7)) copyText("https://Nxrix.github.io#"+pixel8.encodeURI(pixel8.input));
+      break;
   }
-  else if (page==2) {
-    input.style.display="none";
-    pixel8.ctx.fillStyle = pixel8.palette[2];
-    var str = "Welcome to Pixel-8 0.2\n(c) 2022 - 2023 Toxel , Nxrix\n\nManual:\n> sx,sy,sz are for screen pixels\n> x,y are for 2d loop of pixels\n> i,j are predefined for loop!\n> t is used for time".split("\n");
-    for (i in str) {
-      pixel8.ctx.fillText(str[i],1,15+i*5);
-    }
-  }
-
-  //camera
+  //--camera--//
   pixel8.camx=pixel8.camx-(pixel8.camx-camxo)*.5;
   pixel8.camy=pixel8.camy-(pixel8.camy-camyo)*.5;
-
-  //ui
-  if (page!=1&&page!=-1) {
+  //--ui--//
+  if (pixel8.page!=1&&pixel8.page!=-1) {
     rectfill(64+pixel8.camx,5+pixel8.camy,128,10,"rgb(49,51,113)");
-    btn(1+pixel8.camx,1+pixel8.camy,0,0,4,7);
-    if (btn(120+pixel8.camx,1+pixel8.camy,3,0,4,7)) cam(128,0), page=1;
-    if (btn(110+pixel8.camx,1+pixel8.camy,2,0,4,7)) cam(0,128),page=2;
-    if (btn(100+pixel8.camx,1+pixel8.camy,1,0,4,7)) cam(0,0),page=0;
+    if (btn(1+pixel8.camx,1+pixel8.camy,0,0,4,7)) cam(0,128),pixel8.page=-2;
+    if (btn(120+pixel8.camx,1+pixel8.camy,3,0,4,7)) cam(128,0),pixel8.page=1;
+    //if (btn(110+pixel8.camx,1+pixel8.camy,2,0,4,7)) cam(-128,0),pixel8.page=2;
+    if (btn(110+pixel8.camx,1+pixel8.camy,1,0,4,7)) cam(0,0),pixel8.page=0;
   }
   spr(pixel8.cursor,1.5625,pixel8.mouse.x+pixel8.camx,pixel8.mouse.y+pixel8.camy,9);
+  
   t++;
 }
 </script>
