--- a/editor.html
+++ b/editor.html
@@ -140,7 +140,21 @@ function btn(x,y,i,j,d,s) {
   spr(i,j,x,y+z,s);
   return z;
 }
-pixel8.encodeURI = (x) => {
+pixel8.decodeURL = (x) => {
+  return x
+    .replace(/%5B/g,"[")
+    .replace(/%5D/g,"]")
+    .replace(/%7B/g,"{")
+    .replace(/%7D/g,"}")
+    .replace(/%25/g,"%")
+    .replace(/%5E/g,"^")
+    .replace(/%7C/g,"|")
+    .replace(/%3C/g,"<")
+    .replace(/%3E/g,">")
+    .replace(/%0A/g,"\n")
+    .replace(/%20/g," ");
+}
+pixel8.encodeURL = (x) => {
   return encodeURI(x)
     .replace(/%5B/g,"[")
     .replace(/%5D/g,"]")
@@ -148,12 +162,14 @@ pixel8.encodeURI = (x) => {
     .replace(/%7D/g,"}")
     .replace(/%25/g,"%")
     .replace(/%5E/g,"^")
-    .replace(/%7C/g,"|");
+    .replace(/%7C/g,"|")
+    .replace(/%3C/g,"<")
+    .replace(/%3E/g,">");
 }
 pixel8.input = input.value;
 const url_string = window.location.href;
 const url = new URL(url_string);
-const cart = url.hash.substring(1);
+const cart = pixel8.decodeURL(url.hash.substring(1));
 if (cart!=undefined&&cart!="") {
   input.value = cart;
   pixel8.input = cart;
@@ -203,7 +219,7 @@ function update() {
       input.style.display="block";
       rectfill(64,121,122,8,pixel8.palette[2]);
       pixel8.ctx.fillStyle = pixel8.palette[1];
-      txt=pixel8.encodeURI(pixel8.input).length;
+      txt=pixel8.encodeURL(pixel8.input).length;
       pixel8.ctx.fillText("url length:",4,112);
       pixel8.ctx.fillText(txt,125-pixel8.ctx.measureText(txt).width,112);
       rect(64,69,125,115,pixel8.palette[2]);
@@ -240,7 +256,7 @@ function update() {
         }
       }
       if (btn(130,61,4,0,4,7)) cam(0,0),pixel8.page=0;
-      if (btn(246,61,8,0,4,7)) copyText("https://Nxrix.github.io#"+pixel8.encodeURI(pixel8.input));
+      if (btn(246,61,8,0,4,7)) copyText("https://Nxrix.github.io/Pixel-8#"+pixel8.encodeURL(pixel8.input));
       break;
   }
   //--camera--//
