--- a/index.html
+++ b/index.html
@@ -13,10 +13,24 @@
 
 <script src="js/pixel8.js"></script>
 <script>
-pixel8.input = "col=(x|y)"
+pixel8.decodeURL = (x) => {
+  return x
+    .replace(/%5B/g,"[")
+    .replace(/%5D/g,"]")
+    .replace(/%7B/g,"{")
+    .replace(/%7D/g,"}")
+    .replace(/%25/g,"%")
+    .replace(/%5E/g,"^")
+    .replace(/%7C/g,"|")
+    .replace(/%3C/g,"<")
+    .replace(/%3E/g,">")
+    .replace(/%0A/g,"\n")
+    .replace(/%20/g," ");
+}
+pixel8.input = "col=(x|y)";
 const url_string = window.location.href;
 const url = new URL(url_string);
-const cart = url.hash.substring(1);
+const cart = pixel8.decodeURL(url.hash.substring(1));
 if (cart!=undefined&&cart!="") {
   pixel8.input = cart;
 }
