--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 
 <script src="js/pixel8.js"></script>
 <script>
-pixel8.decodeURL = (x) => {
-  return x
-    .replace(/%5B/g,"[")
-    .replace(/%5D/g,"]")
-    .replace(/%7B/g,"{")
-    .replace(/%7D/g,"}")
-    .replace(/%25/g,"%")
-    .replace(/%5E/g,"^")
-    .replace(/%7C/g,"|")
-    .replace(/%3C/g,"<")
-    .replace(/%3E/g,">")
-    .replace(/%0A/g,"\n")
-    .replace(/%20/g," ");
+pixel8.input = "col=x|y;";
+pixel8.encode = (x) => {
+  var y="";
+  x=x.split("");
+  var l=Math.round(x.length/2);
+  for (i=0;i<l;i++) y+=String.fromCharCode((x[i*2].charCodeAt(0)+(x[i*2+1]||String.fromCharCode(0)).charCodeAt(0)*256)+65536);
+  return y;
 }
-pixel8.input = "col=(x|y)";
+pixel8.decode = (x) => {
+  let y="";
+  x=x.split("");
+  for (i=0;i<x.length;i++) y+=String.fromCharCode((x[i].charCodeAt(0))%256-65536)+String.fromCharCode(Math.round((x[i].charCodeAt(0))/256)-65536);
+  return y;
+}
 const url_string = window.location.href;
 const url = new URL(url_string);
-const cart = pixel8.decodeURL(url.hash.substring(1));
-if (cart!=undefined&&cart!="") {
-  pixel8.input = cart;
+const cart = url.searchParams.get("cart");
+if (cart!=undefined) {
+  var cartD = pixel8.decode(cart);
+  pixel8.input = cartD;
 }
 let t=0;
 const scale = 4;
