--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ const c=w/2-.5;
 const n=256/w;
 let vec=[];
 function update() {
-  //console.clear();
-  //requestAnimationFrame(update);
+  console.clear();
+  requestAnimationFrame(update);
   cls();
   var sz=1;
   for (var i=0;i<w;i++) {
