--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ pixel8.encode = (x) => {
   var y="";
   x=x.split("");
   var l=Math.round(x.length/2);
-  for (i=0;i<l;i++) y+=String.fromCharCode((x[i*2].charCodeAt(0)+(x[i*2+1]||String.fromCharCode(0)).charCodeAt(0)*256)+65536);
+  for (i=0;i<l;i++) y+=String.fromCharCode((x[i*2].charCodeAt(0)*256+(x[i*2+1]||String.fromCharCode(0)).charCodeAt(0))+128);
   return y;
 }
 pixel8.decode = (x) => {
   let y="";
   x=x.split("");
-  for (i=0;i<x.length;i++) y+=String.fromCharCode((x[i].charCodeAt(0))%256-65536)+String.fromCharCode(Math.round((x[i].charCodeAt(0))/256)-65536);
+  for (i=0;i<x.length;i++) y+=String.fromCharCode(Math.round((x[i].charCodeAt(0)-128)/256))+String.fromCharCode((x[i].charCodeAt(0))%256-128);
   return y;
 }
 const url_string = window.location.href;
