--- a/editor.html
+++ b/editor.html
@@ -2,12 +2,6 @@
 <html>
 
 <head>
-
-<script>
-//window.onerror = function(message, url, lineNumber) {  
-  //return lineNumber; 
-//};
-</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta name="theme-color" content="#262637">
@@ -26,6 +20,7 @@
   cursor: none;
 }
 #input {
+  cursor: none;
   background: #0000;
   position: fixed;
   resize: none;
