--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#262637">
   <link rel="icon" type="image/x-icon" href="img/icon.png">
-  <title>pixel8</title>
+  <title>Pixel-8</title>
+  <meta property="og:title" content="Pixel-8 | Tiny Fantasy Console">
+  <meta property="og:description" content="Try this creation on Pixel-8!">
+  <meta property="og:type" content="article" />
+  <meta property="og:image" content="img/icon.png">
+  <meta name="twitter:card" content="summary">
 </head>
 
 <body res="128"></body>
