--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Pixel-8 | Tiny Fantasy Console">
   <meta property="og:description" content="Try this creation on Pixel-8!">
   <meta property="og:type" content="article" />
-  <meta property="og:image" content="img/icon.png">
+  <meta property="og:image" content="https://nxrix.github.io/Pixel-8/img/icon.png">
   <meta name="twitter:card" content="summary">
 </head>
 
